# edgeware-node

./: Cargo.toml  Dockerfile  rust-toolchain
client/evm-tracing/: Cargo.toml
client/rpc-core/debug/: Cargo.toml
client/rpc-core/trace/: Cargo.toml
client/rpc-core/txpool/: Cargo.toml
client/rpc/debug/: Cargo.toml
client/rpc/trace/: Cargo.toml
client/rpc/txpool/: Cargo.toml
docker/: Dockerfile  beresheet.yml
modules/chainbridge/: Cargo.toml
modules/edge-assets/: Cargo.toml
modules/edge-chainbridge/: Cargo.toml
modules/edge-treasury-reward/: Cargo.toml
node/cli/: Cargo.toml
node/cli-opt/: Cargo.toml
node/cli-opt/src/: lib.rs
node/cli/browser-demo/: index.html
node/cli/src/: chain_spec.rs  cli.rs  command.rs  service.rs
node/evm_tracer/: Cargo.toml
node/executor/: Cargo.toml
node/executor/benches/: bench.rs
node/executor/src/: lib.rs
node/primitives/: Cargo.toml
node/primitives/src/: lib.rs
node/rpc/: Cargo.toml
node/rpc-client/: Cargo.toml
node/rpc-client/src/: main.rs
node/rpc/src/: client.rs  lib.rs
node/runtime/: Cargo.toml
node/runtime-interface/: Cargo.toml
node/runtime/src/: lib copy 2.rs  lib.rs  precompiles.rs
pallets/edge-assets/: Cargo.toml
pallets/edge-treasury-reward/: Cargo.toml
primitives/rpc/debug/: Cargo.toml
primitives/rpc/txpool/: Cargo.toml
scripts/: init.sh
