[workspace]
members = [
	"modules/edge-treasury-reward",
# xox - Should we reenable this?
	# "modules/chainbridge",
	# "modules/edge-chainbridge",
	"node/cli",
	"node/executor",
	"node/primitives",
	"node/rpc",
	"node/rpc-client",
	"node/runtime",
	"node/runtime-interface",
]
exclude = ["vendor"]

[profile.release]
# Edgeware runtime requires unwinding.
panic = "unwind"

[profile.dev.package]
aes-soft = { opt-level = 3 }
aesni = { opt-level = 3 }
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crossbeam-queue = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
h2 = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

# Generated with: `cargo lock -s | grep substrate.git | cut -d' ' -f2 | awk '{print $0, "= { git = \"https://github.com/woozzzzy/substrate.git\", rev = \"b2a50198d3fa71959c77d22edb5fdb8c1e74006c\" }"}'`
# Make sure to have cargo-lock installed with: `cargo install cargo-lock --features=cli`

[patch.crates-io]
# frontier deps
fc-consensus = { git = "https://github.com/woozzzzy/frontier", branch = "moonbeam-polkadot-v0.9.10" }
fc-rpc = { git = "https://github.com/woozzzzy/frontier", branch = "moonbeam-polkadot-v0.9.10" }
fc-rpc-core = { git = "https://github.com/woozzzzy/frontier", branch = "moonbeam-polkadot-v0.9.10" }
fp-consensus = { git = "https://github.com/woozzzzy/frontier", branch = "moonbeam-polkadot-v0.9.10" }
fp-evm = { git = "https://github.com/woozzzzy/frontier", branch = "moonbeam-polkadot-v0.9.10" }
fp-rpc = { git = "https://github.com/woozzzzy/frontier", branch = "moonbeam-polkadot-v0.9.10" }
pallet-ethereum = { git = "https://github.com/woozzzzy/frontier", branch = "moonbeam-polkadot-v0.9.10" }
pallet-evm = { git = "https://github.com/woozzzzy/frontier", branch = "moonbeam-polkadot-v0.9.10" }
pallet-evm-precompile-ed25519 = { git = "https://github.com/woozzzzy/frontier", branch = "moonbeam-polkadot-v0.9.10" }
pallet-evm-precompile-modexp = { git = "https://github.com/woozzzzy/frontier", branch = "moonbeam-polkadot-v0.9.10" }
pallet-evm-precompile-simple = { git = "https://github.com/woozzzzy/frontier", branch = "moonbeam-polkadot-v0.9.10" }

# substrate deps
fork-tree = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
frame-benchmarking = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
frame-benchmarking-cli = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
frame-executive = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
frame-metadata = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
frame-support = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
frame-support-procedural = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
frame-support-procedural-tools = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
frame-support-procedural-tools-derive = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
frame-system = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
frame-system-rpc-runtime-api = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-aura = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-authority-discovery = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-authorship = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-balances = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-bounties = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-collective = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-contracts = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-contracts-primitives = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-contracts-proc-macro = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-contracts-rpc = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-democracy = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-elections-phragmen = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-grandpa = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-identity = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-im-online = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-indices = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-multisig = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-offences = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-proxy = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-randomness-collective-flip = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-recovery = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-scheduler = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-session = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-staking = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-staking-reward-curve = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-sudo = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-timestamp = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-tips = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-transaction-payment = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-transaction-payment-rpc = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-treasury = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-utility = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
pallet-vesting = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-authority-discovery = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-basic-authorship = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-block-builder = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-chain-spec = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-chain-spec-derive = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-cli = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
# xox not present so removed. Check!
# sc-cli-proc-macro = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-client-api = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-client-db = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-consensus = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-consensus-aura = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-consensus-babe = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-consensus-epochs = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-consensus-slots = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-consensus-uncles = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-executor = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-executor-common = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-executor-wasmi = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-executor-wasmtime = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-finality-grandpa = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-finality-grandpa-rpc = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-informant = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-keystore = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-light = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-network = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-network-gossip = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-offchain = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-peerset = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-proposer-metrics = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-rpc = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-rpc-api = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-rpc-server = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-service = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-state-db = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-telemetry = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-tracing = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
# xox not present so removed. Check!
# sc-transaction-graph = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sc-transaction-pool = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
# xox not present so removed. Check!
# sp-allocator = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-api = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-api-proc-macro = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-application-crypto = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-arithmetic = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-authority-discovery = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-authorship = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-block-builder = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-blockchain = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
# xox not present so removed. Check!
# sp-chain-spec = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-consensus = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-consensus-aura = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-consensus-babe = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-consensus-slots = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-consensus-vrf = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-core = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-database = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-debug-derive = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-externalities = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-finality-grandpa = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-inherents = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-io = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-keyring = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-keystore = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-npos-elections = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
# xox not present so removed. Check!
# sp-npos-elections-compact = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-offchain = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-panic-handler = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-rpc = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-runtime = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-runtime-interface = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-runtime-interface-proc-macro = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-sandbox = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-serializer = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-session = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-staking = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-state-machine = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-std = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-storage = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-tasks = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-timestamp = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-tracing = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-transaction-pool = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-trie = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-utils = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-version = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
sp-wasm-interface = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
substrate-browser-utils = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
substrate-frame-cli = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
substrate-frame-rpc-system = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
substrate-prometheus-endpoint = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
substrate-test-client = { git = "https://github.com/woozzzzy/substrate.git", branch = "polkadot-v0.9.10" }
