[package]
name = 'chainbridge'
version = '1.0.0'
authors = ['david@chainsafe.io']
edition = '2018'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

# primitives
sp-std = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-runtime = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-io = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-core = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }

# frame dependencies
frame-support = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
frame-system = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }

pallet-balances = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]

runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]