[package]
name = "edge-assets"
version = "3.2.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/woozzzzy/substrate/"
description = "FRAME asset management pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-std = { git = "https://github.com/woozzzzy/substrate", branch = "polkadot-v0.9.10", default-features = false }
sp-runtime = { git = "https://github.com/woozzzzy/substrate", branch = "polkadot-v0.9.10", default-features = false }
frame-support = { git = "https://github.com/woozzzzy/substrate", branch = "polkadot-v0.9.10", default-features = false }
frame-system = { git = "https://github.com/woozzzzy/substrate", branch = "polkadot-v0.9.10", default-features = false }
frame-benchmarking = { git = "https://github.com/woozzzzy/substrate", branch = "polkadot-v0.9.10", default-features = false, optional = true }

[dev-dependencies]
sp-core = { git = "https://github.com/woozzzzy/substrate", branch = "polkadot-v0.9.10" }
sp-std = { git = "https://github.com/woozzzzy/substrate", branch = "polkadot-v0.9.10" }
sp-io = { git = "https://github.com/woozzzzy/substrate", branch = "polkadot-v0.9.10" }
pallet-balances = { git = "https://github.com/woozzzzy/substrate", branch = "polkadot-v0.9.10", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]