[package]
name = "edgeware-cli"
version = "3.2.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
description = "Edgeware implementation using a substrate node."
build = "build.rs"
edition = "2018"
default-run = "edgeware"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[badges]
travis-ci = { repository = "hicommonwealth/edgeware-node", branch = "master" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "hicommonwealth/edgeware-node" }
is-it-maintained-open-issues = { repository = "hicommonwealth/edgeware-node" }

[[bin]]
name = "edgeware"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.101", features = ["derive"] }
futures = { version = "0.3.16", features = ["compat"] }
hex-literal = "0.3.1"
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }
tracing = "0.1.19"
parking_lot = "0.10.0"
hex = "0.3.2"
serde_json = "1.0"

# primitives
sp-authority-discovery = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sp-blockchain = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sp-consensus-aura = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sp-finality-grandpa = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sp-core = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sp-runtime = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sp-timestamp = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-inherents = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sp-keyring = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sp-io = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-consensus = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sp-transaction-pool = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }

# client dependencies
sc-client-api = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sc-chain-spec = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sc-consensus = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sc-transaction-pool = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sc-network = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sc-consensus-aura = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sc-finality-grandpa = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sc-client-db = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sc-offchain = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sc-rpc = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sc-basic-authorship = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sc-service = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sc-tracing = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sc-telemetry = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sc-authority-discovery = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }


# frame dependencies
pallet-indices = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
pallet-timestamp = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
pallet-contracts = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
frame-system = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
pallet-balances = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
pallet-transaction-payment = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
frame-support = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
pallet-im-online = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
pallet-authority-discovery = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
pallet-staking = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
pallet-grandpa = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
# xox - commented below and added the two lines below
# pallet-evm = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
pallet-dynamic-fee = { git = "https://github.com/woozzzzy/frontier", branch = "bb" }
pallet-evm = { git = "https://github.com/woozzzzy/frontier", branch = "bb" }

# node-specific dependencies
edgeware-runtime = { version = "3.2.0", path = "../runtime" }
edgeware-rpc = { version = "3.2.0", path = "../rpc" }
edgeware-primitives = { version = "3.2.0", path = "../primitives" }
edgeware-executor = { version = "3.2.0", path = "../executor" }

# CLI-specific dependencies
sc-cli = { git = "https://github.com/woozzzzy/substrate", branch = "bb", optional = true }
frame-benchmarking-cli = { git = "https://github.com/woozzzzy/substrate", branch = "bb", optional = true }
# xox -  The below are linked to woozy, but maybe the substrate of woozy is different from the one here.
# fc-consensus = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
# fp-consensus = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
# fc-rpc-core = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
# xox check the default-features = false below. Is it relevant?
fc-consensus = { git = "https://github.com/woozzzzy/frontier", branch = "bb", default-features = false }
fp-consensus = { git = "https://github.com/woozzzzy/frontier", branch = "bb", default-features = false }
fc-rpc-core = { git = "https://github.com/woozzzzy/frontier", branch = "bb", default-features = false }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.7", optional = true }
# xox - bb changes 
# browser-utils = { git = "https://github.com/woozzzzy/substrate", branch = "bb", package = "substrate-browser-utils", optional = true }

[target.'cfg(target_arch="x86_64")'.dependencies]
edgeware-executor = { path = "../executor", features = [ "wasmtime" ] }
sc-cli = { git = "https://github.com/woozzzzy/substrate", branch = "bb", optional = true, features = [ "wasmtime" ] }
sc-service = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false, features = [ "wasmtime" ] }
sp-trie = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false, features = ["memory-tracker"] }

[dev-dependencies]
sc-keystore = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sc-consensus = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sc-consensus-epochs = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }

futures = "0.3.16"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.17"
serde_json = "1.0"
regex = "1"
platforms = "0.2.1"

[build-dependencies]
structopt = { version = "0.3.8", optional = true }
frame-benchmarking-cli = { git = "https://github.com/woozzzzy/substrate", branch = "bb", optional = true }
substrate-build-script-utils = { git = "https://github.com/woozzzzy/substrate", branch = "bb", optional = true }
substrate-frame-cli = { git = "https://github.com/woozzzzy/substrate", branch = "bb", optional = true }
sc-cli = { git = "https://github.com/woozzzzy/substrate", branch = "bb", optional = true }

[features]
default = [ "cli" ]
browser = [
# xox - bb changes.
	# "browser-utils",
	"wasm-bindgen",
	"wasm-bindgen-futures",
]
cli = [
	"edgeware-executor/wasmi-errno",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	"structopt",
	"substrate-build-script-utils",
]

runtime-benchmarks = [
	"edgeware-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]