[package]
name = "edgeware-cli"
version = "3.3.6"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
description = "Edgeware implementation using a substrate node."
build = "build.rs"
edition = "2018"
default-run = "edgeware"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[badges]
travis-ci = { repository = "hicommonwealth/edgeware-node" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "hicommonwealth/edgeware-node" }
is-it-maintained-open-issues = { repository = "hicommonwealth/edgeware-node" }

[[bin]]
name = "edgeware"
path = "bin/main.rs"
required-features = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.3.1"
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3", optional = true }
tracing = "0.1.19"
parking_lot = "0.10.0"
hex = "0.3.2"
serde_json = "1.0"

# primitives
sp-authority-discovery = { version = "4.0.0-dev" }
sp-blockchain = { version = "4.0.0-dev" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-finality-grandpa = { version = "4.0.0-dev" }
sp-core = { version = "4.0.0-dev" }
sp-runtime = { version = "4.0.0-dev" }
sp-timestamp = { version = "4.0.0-dev", default-features = false }
sp-inherents = { version = "4.0.0-dev" }
sp-keyring = { version = "4.0.0-dev" }
sp-io = { version = "4.0.0-dev" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-transaction-pool = { version = "4.0.0-dev" }

# client dependencies
sc-client-api = { version = "4.0.0-dev" }
sc-chain-spec = { version = "4.0.0-dev" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-transaction-pool = { version = "4.0.0-dev" }
# sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
sc-offchain = { version = "4.0.0-dev" }
sc-rpc = { version = "4.0.0-dev" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
# sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
sc-tracing = { version = "4.0.0-dev" }
sc-telemetry = { version = "4.0.0-dev" }
# sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
# sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", optional = true }


# frame dependencies
pallet-indices = { version = "4.0.0-dev" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false }
pallet-contracts = { version = "4.0.0-dev" }
frame-system = { version = "4.0.0-dev" }
pallet-balances = { version = "4.0.0-dev" }
pallet-transaction-payment = { version = "4.0.0-dev" }
frame-support = { version = "4.0.0-dev", default-features = false }
pallet-im-online = { version = "4.0.0-dev", default-features = false }
pallet-authority-discovery = { version = "4.0.0-dev" }
pallet-staking = { version = "4.0.0-dev" }
pallet-grandpa = { version = "4.0.0-dev" }
pallet-dynamic-fee = { git = "https://github.com/woozzzzy/frontier" }
pallet-evm = { git = "https://github.com/woozzzzy/frontier" }

# node-specific dependencies
edgeware-runtime = { version = "3.3.6", path = "../runtime", default-features = false }
edgeware-rpc = { version = "3.3.6", path = "../rpc" }
edgeware-primitives = { version = "3.3.6", path = "../primitives", default-features = false }
edgeware-executor = { version = "3.3.6", path = "../executor", default-features = false }
moonbeam-rpc-txpool = { path = "../../client/rpc/txpool", default-features = false }
moonbeam-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool", default-features = false }
moonbeam-rpc-debug = { path = "../../client/rpc/debug", default-features = false }
moonbeam-rpc-primitives-debug = { path = "../../primitives/rpc/debug", default-features = false }
moonbeam-rpc-trace = { path = "../../client/rpc/trace", default-features = false }

# CLI-specific dependencies
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", optional = true }
frame-benchmarking-cli = { version = "4.0.0-dev", optional = true }
cli-opt = { package = "moonbeam-cli-opt", path = "../cli-opt", optional = true }

fc-consensus = { default-features = false, git = "https://github.com/woozzzzy/frontier" }
fp-consensus = { default-features = false, git = "https://github.com/woozzzzy/frontier" }
fc-rpc = { default-features = false, git = "https://github.com/woozzzzy/frontier", features = ["rpc_binary_search_estimate"] }
fp-rpc = { default-features = false, git = "https://github.com/woozzzzy/frontier" }
fc-rpc-core = { default-features = false, git = "https://github.com/woozzzzy/frontier" }
fc-db = { default-features = false, git = "https://github.com/woozzzzy/frontier" }
fc-mapping-sync = { default-features = false, git = "https://github.com/woozzzzy/frontier" }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.7", optional = true }
browser-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", package = "substrate-browser-utils", optional = true }
libp2p-wasm-ext = { version = "0.29", features = ["websocket"], optional = true }

tokio = "0.2"

[target.'cfg(target_arch="x86_64")'.dependencies]
edgeware-executor = { path = "../executor", features = [ "wasmtime" ] }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", features = [ "wasmtime" ] }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false, features = [ "wasmtime" ] }
sp-trie = { version = "4.0.0-dev", default-features = false, features = ["memory-tracker"] }

[dev-dependencies]
sc-keystore = { version = "4.0.0-dev" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }

futures = "0.3.4"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.17"
serde_json = "1.0"
regex = "1"
platforms = "0.2.1"

[build-dependencies]
structopt = { version = "0.3", optional = true }
frame-benchmarking-cli = { version = "4.0.0-dev", optional = true }
substrate-build-script-utils = { version = "3.0.0", optional = true }
substrate-frame-cli = { version = "4.0.0-dev", optional = true }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", optional = true }

[features]
default = [ "cli" ]
cli = [
	"edgeware-executor/wasmi-errno",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	# "sc-finality-grandpa-warp-sync",
	"structopt",
	"substrate-build-script-utils",
	"cli-opt"
]
frontier-block-import = []
cli-completion = []
runtime-benchmarks = [
	"edgeware-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
